crates/wdl-grammar/tests/parsing/version-valid/source.wdl
# This is a test of a version statement with a syntactically-valid version.
#
# Checks for whether the version is recognized (e.g., `1.2`) are deferred to
# consumers of the syntax.

version 1-DEVEL.foo
